--- a/NoPrismMVVM/NoPrismMVVM.UWP/NoPrismMVVM.UWP.csproj
+++ b/NoPrismMVVM/NoPrismMVVM.UWP/NoPrismMVVM.UWP.csproj
@@ -143,8 +143,11 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5"/>
+    <PackageReference Include="ReactiveProperty">
+      <Version>5.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1009999" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NoPrismMVVM\NoPrismMVVM.csproj">
