--- a/NoPrismMVVM/NoPrismMVVM.iOS/NoPrismMVVM.iOS.csproj
+++ b/NoPrismMVVM/NoPrismMVVM.iOS/NoPrismMVVM.iOS.csproj
@@ -148,7 +148,10 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="ReactiveProperty">
+      <Version>5.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1009999" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
